# virtual_mic

./: .gitmodules  CMakeLists.txt  README.md
res/: resource.h
src/: main.cpp  utils.cpp  utils.h
ui/: CMakeLists.txt
ui/src/: audiodevice.cpp  audiodevice.h  audiosource.cpp  audiosource.h  controller.cpp  controller.h  labelbutton.cpp  labelbutton.h  loadingscreen.cpp  loadingscreen.h  loadingscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.h  switch.cpp  utils.cpp  utils.h
vits/: CMakeLists.txt  model.cpp  model.h  vad.cpp  vad.h
vits/vad/: CMakeLists.txt  silero_vad.cpp  silero_vad.h
